--- a/env.example
+++ b/env.example
@@ -4,3 +4,8 @@ DB_HOST=localhost
 DB_NAME=jobtracker
 DB_PASSWORD=YOUR_PASSWORD
 DB_PORT=5432
+
+# Google Maps API key for location services and map display
+# Get your API key from: https://console.developers.google.com/
+# Enable: Maps JavaScript API, Places API, Geocoding API
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=YOUR_GOOGLE_MAPS_API_KEY
