Added support for supabase

--- a/env.example
+++ b/env.example
@@ -5,6 +5,13 @@ DB_NAME=jobtracker
 DB_PASSWORD=YOUR_PASSWORD
 DB_PORT=5432
 
+# Database Provider Configuration
+# Set to "postgresql" or "supabase" to determine which database options are available
+# postgresql: User can choose between Mock + PostgreSQL
+# supabase: User can choose between Mock + Supabase (requires authentication)
+NEXT_PUBLIC_DATABASE_PROVIDER=postgresql
+
+
 # Google Maps API key for location services and map display
 # Get your API key from: https://console.developers.google.com/
 # Enable: Maps JavaScript API, Places API, Geocoding API
